<resources>
    <string name="app_name">Chat</string>
    <string name="home">Home</string>
    <string name="test">Test</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="trai_nghiem_awesome_chat">Experience Chat With People</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="fullName">FULL NAME</string>
    <string name="full_name_hint">Full name</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="friend">Friend</string>
    <string name="message">Message</string>
    <string name="text_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notification">Notification</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="app_version">App version</string>
    <string name="log_out">Log out</string>
    <string name="question_log_out">Want to sign out?</string>
    <string name="email_exist">The email address has been used</string>
    <string name="wrong_email_or_password">Account information or password is incorrect</string>
    <string name="accept">Agree</string>
    <string name="add_friend">Add friend</string>
    <string name="no_account">No account?</string>
    <string name="register_now">Register now</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login_now">Login now</string>
    <string name="login_success">Login success</string>
    <string name="have_account">Have an account?</string>
    <string name="agree_with">I agree to the</string>
    <string name="policy">policies</string>
    <string name="and">and</string>
    <string name="rules">terms</string>
    <string name="cannot_get_current_user">Unable to get user information</string>
    <string name="cannot_get_all_user">Unable to get user list</string>
    <string name="Save">Save</string>
    <string name="camera">Camera</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_user_name">Enter username</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="birthday">Date of birth</string>
    <string name="enter_birthday">Enter date of birth</string>
    <string name="choose_image_from">Select image from</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="update_failed">Update failed</string>
    <string name="name_empty">Name cannot be blank</string>
    <string name="invalid_dob">Date of birth is not in correct format (dd/MM/yyyy)</string>
    <string name="name_too_long"><![CDATA[Name is too long (>25 characters)]]></string>
    <string name="email_invalid">Email invalidate</string>
    <string name="password_at_least">Passwords must be at least 6 characters</string>
    <string name="question_edit_profile">Do you want to change profile information?</string>
    <string name="update_success">Update successful</string>
    <string name="enter_message">Enter message…</string>
    <string name="send_message_failed">Sending message failed</string>
    <string name="send_message_success">Message sent successfully</string>
    <string name="today">Today</string>
    <string name="cannot_read_message">Unable to load message</string>
    <string name="create_conversation">Create a new conversation</string>
    <string name="exist_conversation">A conversation already exists</string>
    <string name="is_seen">Seen</string>
    <string name="is_delivered">Delivered</string>
    <string name="sent_an_image">Sent an image</string>
    <string name="yesterday">Yesterday</string>
    <string name="add_friend_failed">Add friends failed</string>
    <string name="is_not_friend">Not friends</string>
    <string name="is_friend">Friends</string>
    <string name="not_exist">Does not exist</string>
    <string name="exist">Exist</string>
    <string name="friend_request">FRIEND REQUEST</string>
    <string name="friend_sent">FRIEND SENT</string>
    <string name="friend_sent_2">Friend sent</string>
    <string name="cancel_failed">Cancel failed</string>
    <string name="send">Send</string>
    <string name="refuse">Refuse</string>
    <string name="refuse_failed">Refuse failed</string>
    <string name="create_message">Create message</string>
    <string name="search_friend_2">Search friend…</string>
    <string name="friend_list">Friends List</string>
    <string name="no_matching_results_were_found">No matching results were found</string>
    <string name="search_message_hint">Search message…</string>
    <string name="search_user_hint">Search friend…</string>
    <string name="you">You:</string>
    <string name="matching_message">matching messages</string>
    <string name="edit_language">Edit language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="all">All</string>
    <string name="request">Request</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="info">Information</string>
    <string name="unknown">Unknown</string>
    <string name="question_delete_conversation">Want to delete this conversation?</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="unfriend">Unfriend</string>
    <string name="accept_friend">Accept Friend</string>
    <string name="cancel_friend_request">Cancel friend request</string>
    <string name="question_exit_app">Want to exit app?</string>
    <string name="chat_with_ai">Chat with AI</string>
    <string name="chat_bot">Chatbot</string>
    <string name="chat_gpt">Gemini</string>
    <string name="llama_2">LLaMA-2</string>
    <string name="error">Error</string>
    <string name="chat">Chat</string>
    <string name="with_people">with people</string>
</resources>