<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="com.android.hoang.chatapplication.ui.auth.signup.SignUpFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_24"
            android:layout_marginTop="@dimen/layout_52"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_52"
            android:fontFamily="@font/lato_bold"
            android:text="@string/register"
            android:textColor="@color/color_1"
            android:textSize="@dimen/text_32sp"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <TextView
            android:id="@+id/txt_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/fullName"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintBottom_toTopOf="@+id/edt_full_name"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/txt_register" />

        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_20"
            android:layout_marginEnd="@dimen/layout_24"
            android:autofillHints="Name"
            android:text="@={signUpViewModel.name}"
            android:drawableEnd="@drawable/user"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_full_name" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/email"
            android:textSize="@dimen/text_14sp"
            android:layout_marginTop="@dimen/layout_28"
            app:layout_constraintBottom_toTopOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/edt_full_name" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_20"
            android:layout_marginEnd="@dimen/layout_24"
            android:autofillHints="Name"
            android:drawableEnd="@drawable/ic_mail2"
            android:fontFamily="@font/lato_regular"
            android:text="@={signUpViewModel.email}"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/password"
            android:textSize="@dimen/text_14sp"
            android:layout_marginTop="@dimen/layout_28"
            app:layout_constraintBottom_toTopOf="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_20"
            android:layout_marginEnd="@dimen/layout_24"
            android:autofillHints="Password"
            android:drawableEnd="@drawable/key1"
            android:fontFamily="@font/lato_regular"
            android:text="@={signUpViewModel.password}"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password" />

        <LinearLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="@{() -> signUpViewModel.checkBoxChecked()}"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:layout_marginTop="@dimen/layout_20">
            <CheckBox
                android:id="@+id/checkbox_accept"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:button="@null"
                android:checked="@={signUpViewModel.isAcceptChecked}"
                android:drawableStart="@drawable/circular_checkbox" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_with"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginStart="@dimen/layout_8" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/color_1"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/color_1"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="4dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/txt_sign_up_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Sign Up Result"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/color_4"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/layout_checkbox"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_52"
            android:text="@string/register"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:enabled="@{signUpViewModel.isSignUpButtonEnabled}"
            app:layout_constraintTop_toBottomOf="@+id/layout_checkbox"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintEnd_toEndOf="@id/edt_password"
            android:layout_marginTop="@dimen/layout_52"
            android:background="@drawable/corner_button" />

        <LinearLayout
            android:id="@+id/layout_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/layout_24">
            <TextView
                android:id="@+id/txt_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textSize="@dimen/text_14sp"
                android:fontFamily="@font/lato_regular" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/color_1"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="4dp"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>