<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginFragmentViewModel"
            type="com.android.hoang.chatapplication.ui.auth.signin.SignInFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/ic_mail"
            android:layout_width="@dimen/layout_124"
            android:layout_height="@dimen/layout_124"
            android:src="@drawable/ic_mail_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/layout_24"
            android:layout_marginTop="@dimen/layout_81" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trai_nghiem_awesome_chat"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_light"
            app:layout_constraintStart_toStartOf="@+id/ic_mail"
            app:layout_constraintTop_toBottomOf="@+id/ic_mail" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/text_32sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/color_1"
            android:layout_marginTop="@dimen/layout_8"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
            app:layout_constraintStart_toStartOf="@+id/txt_welcome" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@+id/txt_login"
            app:layout_constraintStart_toStartOf="@+id/txt_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={loginFragmentViewModel.email}"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/black"
            android:hint="@string/enter_email"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/layout_20"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/layout_24"
            app:layout_constraintTop_toBottomOf="@id/txt_email"
            android:autofillHints="Email"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_mail2" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/txt_email"
            android:layout_marginTop="@dimen/layout_28" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={loginFragmentViewModel.password}"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/enter_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/layout_20"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/layout_24"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            android:autofillHints="Password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/key1" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/color_1"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            android:layout_marginTop="@dimen/layout_8" />

        <TextView
            android:id="@+id/txt_sign_in_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Sign In Result"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/color_4"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/txt_forgot_password"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_52"
            android:text="@string/login"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:enabled="@{loginFragmentViewModel.isLoginButtonEnabled}"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
            android:layout_marginTop="@dimen/layout_52"
            android:background="@drawable/corner_button" />

        <LinearLayout
            android:id="@+id/layout_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/layout_24">
            <TextView
                android:id="@+id/txt_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="@dimen/text_14sp"
                android:fontFamily="@font/lato_regular" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/color_1"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="4dp"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>