<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient">

    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="@dimen/layout_280"
        android:layout_height="@dimen/layout_280"
        android:src="@drawable/ic_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/txt_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textColor="@color/white"
        android:textSize="@dimen/text_40sp"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_text2"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:padding="@dimen/layout_4"/>

    <TextView
        android:id="@+id/txt_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_people"
        android:textColor="@color/white"
        android:textSize="@dimen/text_40sp"
        android:fontFamily="@font/lato_light"
        app:layout_constraintBottom_toBottomOf="@id/ic_app"
        app:layout_constraintStart_toEndOf="@id/txt_chat"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/layout_4"/>
</androidx.constraintlayout.widget.ConstraintLayout>