<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/child_constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/my_gradient"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingHorizontal="@dimen/layout_24"
            android:paddingVertical="@dimen/layout_16"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back_white"
            app:layout_constraintBottom_toBottomOf="@+id/txt_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_edit" />

        <TextView
            android:id="@+id/txt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_52"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_language"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/bottom_view_constraint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_24"
            android:background="@drawable/corner_top_left_and_right_view"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  Add Body -->

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_constraint">

        <RadioButton
            android:id="@+id/radio_vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/layout_24"
            android:buttonTint="@color/color_1"/>

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/layout_24"
            android:buttonTint="@color/color_1" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_language"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_52"
        android:text="@string/accept"
        android:textSize="@dimen/text_18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/corner_button"
        app:layout_constraintTop_toBottomOf="@id/radio_group_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/layout_24"
        android:layout_marginEnd="@dimen/layout_24"
        android:layout_marginTop="@dimen/layout_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>