<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/layout_8">

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btn_add_friend"
        android:layout_marginStart="@dimen/layout_8">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avt"
            android:layout_width="@dimen/layout_36"
            android:layout_height="@dimen/layout_36"
            android:src="@drawable/test_avt"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Le Minh Hoang"
            android:textSize="@dimen/text_18sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/layout_16"
            android:layout_toEndOf="@+id/user_avt"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_28"
        android:background="@drawable/corner_button"
        android:text="@string/add_friend"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14sp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        tools:ignore="RelativeOverlap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_friend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_28"
        android:background="@drawable/corner_button_cancel"
        android:text="@string/cancel"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_14sp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        tools:ignore="RelativeOverlap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept_friend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_28"
        android:background="@drawable/corner_button"
        android:text="@string/accept"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14sp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>